패키지 추가 및 수정